test: :white_check_mark: Split tests to run fast ones with 'test' and slow ones also with 'verify'